# TreesPresentation

./: AVLTree.cpp  AVLTree.h  CMakeLists.txt  Node.h  RBTree.cpp  RBTree.h  README.md  SplayTree.cpp  SplayTree.h  VertexList.cpp  VertexList.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
